tests/ui/spirv-attr/capabilities/not_entry_point.stderr
error: `#[spirv(capability)]` can only be used with entry point functions.
 --> $DIR/not_entry_point.rs:3:9
  |
3 | #[spirv(capability(multi_view))]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

